[package]
name = "z57release-verification"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.57"
aws-sdk-kms = "0.35.0"
tokio = { version = "1", features = ["full"]}
tracing-subscriber = "0.3.17"